--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Inventory Management for FIRST Robotics Canada",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Kaushal Kapasi",
