--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "angular": "1.*",
     "moment": "^2.17.1",
-    "angular-ui-router": "^0.3.2"
+    "angular-ui-router": "^0.3.2",
+    "toastr": "^2.1.3",
+    "angular-animate": "^1.6.1"
   }
 }
