--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "moment": "^2.17.1",
     "angular-ui-router": "^0.3.2",
     "toastr": "^2.1.3",
-    "angular-animate": "^1.6.1"
+    "angular-animate": "^1.6.1",
+    "angular-cookies": "^1.6.1"
   }
 }
