--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "Kaushal Kapasi",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.6.3",
     "morgan": "^1.7.0",
+    "passport": "^0.3.2",
     "q": "^1.4.1"
   }
 }
