--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^4.6.3",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
     "q": "^1.4.1"
   }
 }
