--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular-ui-router": "^0.3.2",
     "toastr": "^2.1.3",
     "angular-animate": "^1.6.1",
-    "angular-cookies": "^1.6.1"
+    "angular-cookies": "^1.6.1",
+    "angular-toastr": "^2.1.1"
   }
 }
