--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "serve-favicon": "^2.3.2"
   }
 }
